--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 server.port=8081
 
+spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Theblunt15.02
+
 #dados para armazenar no redis
 #spring.redis.host=localhost
 #spring.redis.password=
 #spring.redis.port=6379
+
+algafood.jwt.keystore.path=keystores/algafood.jks
+algafood.jwt.keystore.password=123456
+algafood.jwt.keystore.keypair-alias=algafood
